--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOC
+<!DOCTYPE html>
 <html>
   <body>
    <p> has the inner text of <a href = https://flatironschool.com >Flatiron School</a> </p>
